# Aprendizado-Federado-aplicado-IOT

./: pyproject.toml
